*SVN*

* Moved template handlers related code from ActionView::Base to ActionView::Template. [Pratik]

* Tests for div_for and content_tag_for helpers. Closes #11223 [thechrisoshow]

* Allow file uploads in Integration Tests.  Closes #11091 [RubyRedRick]

* Refactor partial rendering into a PartialTemplate class. [Pratik]

* Added that requests with JavaScript as the priority mime type in the accept header and no format extension in the parameters will be treated as though their format was :js when it comes to determining which template to render. This makes it possible for JS requests to automatically render action.js.rjs files without an explicit respond_to block  [DHH]

* Tests for distance_of_time_in_words with TimeWithZone instances. Closes #10914 [ernesto.jimenez]

* Remove support for multivalued (e.g., '&'-delimited) cookies. [Jamis Buck]

* Fix problem with render :partial collections, records, and locals. #11057 [lotswholetime] 

* Added support for naming concrete classes in sweeper declarations [DHH]

* Remove ERB trim variables from trace template in case ActionView::Base.erb_trim_mode is changed in the application.  #10098 [tpope, kampers]

* Fix typo in form_helper documentation.  #10650 [xaviershay, kampers]

* Fix bug with setting Request#format= after the getter has cached the value.  #10889 [cch1]

* Correct inconsistencies in RequestForgeryProtection docs.  #11032 [mislav]

* Introduce a Template class to ActionView.  #11024 [lifofifo]

* Introduce the :index option for form_for and fields_for to simplify multi-model forms (see http://railscasts.com/episodes/75).  #9883 [rmm5t]

* Introduce map.resources :cards, :as => 'tarjetas' to use a custom resource name in the URL: cards_path == '/tarjetas'.  #10578 [blj]

* TestSession supports indifferent access.  #7372 [tamc, Arsen7, mhackett, julik, jean.helou]

* Make assert_routing aware of the HTTP method used.  #8039 [mpalmer]